feat: package all in one agent jar